pci: Added Axxia PCIe driver support (X7 based)
Signed-off-by: SangeethaRao <sangeetha.rao@intel.com>
[Quanyang:Original patch taken from
git://git.yoctoproject.org/linux-yocto-4.12 standard/axxia/base]
Signed-off-by: Quanyang Wang <quanyang.wang@windriver.com>

--- a/drivers/pci/controller/Kconfig
+++ b/drivers/pci/controller/Kconfig
@@ -3,6 +3,14 @@
 menu "PCI controller drivers"
 	depends on PCI
 
+config PCI_AXXIA
+	bool "AXXIA PCIe controller"
+	depends on ARCH_AXXIA
+	default ARCH_AXXIA
+	help
+	 Enables support for the Axxia PCIe controller. There are three PEI
+	 controllers on X9. Only RootComplex mode is supported.
+
 config PCI_MVEBU
 	bool "Marvell EBU PCIe controller"
 	depends on ARCH_MVEBU || ARCH_DOVE || COMPILE_TEST
