--- a/drivers/pci/controller/Kconfig
+++ b/drivers/pci/controller/Kconfig
@@ -5,11 +5,21 @@ menu "PCI controller drivers"
 
 config PCI_AXXIA
 	bool "AXXIA PCIe controller"
+	depends on ARCH_AXXIA
+	default ARCH_AXXIA
+	help
+	 Enables support for the Axxia X7 PCIe controller.
+	 There are two PEI controllers on X7. Only RootComplex
+	 mode is supported.
+
+config PCI_AXXIA_DW
+	bool "AXXIA PCIe controller"
 	depends on ARCH_AXXIA && ARM64
 	default ARCH_AXXIA
 	help
-	 Enables support for the Axxia PCIe controller. There are three PEI
-	 controllers on X9. Only RootComplex mode is supported.
+	 Enables support for the Axxia PCIe DesignWare controller.
+	 There are three PEI controllers on X9. Only RootComplex
+	 mode is supported.
 
 config PCI_MVEBU
 	bool "Marvell EBU PCIe controller"
