--- a/drivers/reset/Makefile
+++ b/drivers/reset/Makefile
@@ -21,4 +21,4 @@ obj-$(CONFIG_RESET_TI_SCI) += reset-ti-sci.o
 obj-$(CONFIG_RESET_TI_SYSCON) += reset-ti-syscon.o
 obj-$(CONFIG_RESET_UNIPHIER) += reset-uniphier.o
 obj-$(CONFIG_RESET_ZYNQ) += reset-zynq.o
-
+obj-$(CONFIG_ZYNQMP_RESET_CONTROLLER) += reset-zynqmp.o
