edac: Added cm edac driver for AXM56XX family
  - Driver source code.
  - Device tree configuration.
  - Updated kbuild and documentation.

Signed-off-by: Marek Majtyka <marekx.majtyka@intel.com>
[Quanyang:Original patch taken from
git://git.yoctoproject.org/linux-yocto-4.12 standard/axxia/base]
Signed-off-by: Quanyang Wang <quanyang.wang@windriver.com>

--- a/drivers/edac/Kconfig
+++ b/drivers/edac/Kconfig
@@ -379,6 +379,15 @@ config EDAC_AXXIA_SYSMEM_5500
 	  Support for System Memory Denali controller error
 	  detection on the AXXIA AXM55xx devices. This enables
 
+config EDAC_AXXIA_CMEM_5600
+	depends on ARCH_AXXIA
+	bool "AXXIA EDAC CMem Controller for 5600"
+	help
+	  Support for Configuration Memory Denali controller error
+	  detection on the AXXIA AXM56xx devices. This enables
+	  the Configuration Memory error detection. Configuration Memory error
+	  detection is interrupt driven.
+
 config EDAC_THUNDERX
 	tristate "Cavium ThunderX EDAC"
 	depends on ARM64
