remoteproc: elf loader: Add get checksum firmware implementation
commit  23d3fc952e94152d52d2f7323c1976a495c496ca from
https://github.com/Xilinx/linux-xlnx.git

Add get_chksum() implementation to calculate the checksum of
the loadable sections of the firmware.

Signed-off-by: Wendy Liang <jliang@xilinx.com>
Signed-off-by: Michal Simek <michal.simek@xilinx.com>
Signed-off-by: Meng Li <Meng.Li@windriver.com>

--- a/drivers/remoteproc/Kconfig
+++ b/drivers/remoteproc/Kconfig
@@ -7,6 +7,8 @@ config REMOTEPROC
 	select FW_LOADER
 	select VIRTIO
 	select WANT_DEV_COREDUMP
+	select VIRTUALIZATION
+	select CRYPTO
 	help
 	  Support for remote processors (such as DSP coprocessors). These
 	  are mainly used on embedded systems.
