staging: fclk: Enable pl clock
commit  46c478c9ef5d7a205b5fc7f82f598ef9955aeb41 from
https://github.com/Xilinx/linux-xlnx.git

Enable the pl clocks.
This is a temporary hack till all the drivers are clock adapted.

Signed-off-by: Shubhrajyoti Datta <shubhrajyoti.datta@xilinx.com>
Signed-off-by: Michal Simek <michal.simek@xilinx.com>
Signed-off-by: Meng Li <Meng.Li@windriver.com>

--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -112,6 +112,8 @@ source "drivers/staging/vboxvideo/Kconfig"
 
 source "drivers/staging/pi433/Kconfig"
 
+source "drivers/staging/fclk/Kconfig"
+
 source "drivers/staging/mt7621-pinctrl/Kconfig"
 
 source "drivers/staging/mt7621-gpio/Kconfig"
