arm64: dts: Fixed parsing error issue in all -sdk.dts files
Signed-off-by: Iordache Florinel-R70177 <florinel.iordache@nxp.com>
[Xulin: Original patch taken from NXP LSDK-18.09.]
Signed-off-by: Xulin Sun <xulin.sun@windriver.com>

--- a/arch/arm64/boot/dts/freescale/fsl-ls1046a-qds-sdk.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-ls1046a-qds-sdk.dts
@@ -44,8 +44,7 @@
  *     OTHER DEALINGS IN THE SOFTWARE.
  */
 
-/dts-v1/;
-#include "fsl-ls1046a-rdb.dts"
+#include "fsl-ls1046a-qds.dts"
 
 &bman_fbpr {
 	compatible = "fsl,bman-fbpr";
