drivers/gpio: Create a Custom Driver for Axxia SoCs
Some of the Axxia SoCs have a different interrupt structure
than the standard PL061 driver.  This commit adds a driver
based on the PL061 driver but with the Axxia interrupt structure.

Signed-off-by: John Jacques <john.jacques@intel.com>
[Quanyang:Because of upstream commit f0fbe7bce733, to compile with
kernel 4.18, modify as below:
1. change "bank->chip.irqdomain" -> "bank->chip.irq.domain"]
[Quanyang:Original patch taken from
git://git.yoctoproject.org/linux-yocto-4.12 standard/axxia/base]
Signed-off-by: Quanyang Wang <quanyang.wang@windriver.com>

--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -411,6 +411,14 @@ config GPIO_PMIC_EIC_SPRD
 	help
 	  Say yes here to support Spreadtrum PMIC EIC device.
 
+config GPIO_AXXIA
+	bool "PrimeCell PL061 GPIO support for Axxia"
+	depends on ARCH_AXXIA
+	select IRQ_DOMAIN
+	select GPIOLIB_IRQCHIP
+	help
+	  Say yes here to support the PrimeCell PL061 GPIO device for Axxia
+
 config GPIO_PXA
 	bool "PXA GPIO support"
 	depends on ARCH_PXA || ARCH_MMP
