drivers/edac: Added ccn504 Interrupt Driven Driver
This is really a basic implementation. There can be added
error handlers for other module (debug, perf, hni, xp).

Fixed backward compatibility issue between linux axxia
BSP 1.59 with older uboot releases.

Signed-off-by: Marek Majtyka <marekx.majtyka@intel.com>
[Quanyang:Original patch taken from
git://git.yoctoproject.org/linux-yocto-4.12 standard/axxia/base]
Signed-off-by: Quanyang Wang <quanyang.wang@windriver.com>

--- a/drivers/edac/Kconfig
+++ b/drivers/edac/Kconfig
@@ -372,6 +372,20 @@ config EDAC_AXXIA_SYSMEM_5600
 	  the System Memory error detection. System Memory error
 	  detection is interrupt driven.
 
+config EDAC_AXXIA_L3_5500
+	tristate "AXXIA EDAC L3 Controller for 5500"
+	help
+	  Support for the eight L3 caches error detection
+	  on the AXXIA AXM55xx devices. This enables the
+	  L3 cache error detection. L3 cache error detection
+	  uses polling mechanism.
+
+config EDAC_AXXIA_L3_5600
+	tristate "AXXIA EDAC L3 Controller for 5600"
+	help
+	  Support for the eight L3 caches error detection
+	  on the AXXIA AXM55xx devices. This enables the
+
 config EDAC_AXXIA_SYSMEM_5500
 	bool "AXXIA EDAC SysMem Controller for 5500"
 	depends on ARCH_AXXIA
