arm64: dts: ls2088a: update backplane support with dpmac connections
Signed-off-by: Iordache Florinel-R70177 <florinel.iordache@nxp.com>
[Xulin: Original patch taken from NXP LSDK-18.09.]
Signed-off-by: Xulin Sun <xulin.sun@windriver.com>

--- a/arch/arm64/boot/dts/freescale/fsl-ls2088a-qds.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-ls2088a-qds.dts
@@ -147,6 +147,24 @@
 	};
 };
 
+/* Update DPMAC connections to backplane PHYs, under SerDes 0x2a_0xXX.
+ * &dpmac1 {
+ *	phy-handle = <&pcs_phy1>;
+ * };
+ *
+ * &dpmac2 {
+ *	phy-handle = <&pcs_phy2>;
+ * };
+ *
+ * &dpmac3 {
+ *	phy-handle = <&pcs_phy3>;
+ * };
+ *
+ * &dpmac4 {
+ *	phy-handle = <&pcs_phy4>;
+ * };
+ */
+
 /* Update DPMAC connections to external PHYs, under SerDes 0x2a_0x49. */
 &dpmac9 {
 	phy-handle = <&mdio0_phy12>;
