arm64: zynqmp: Add DTs for xilinx platforms
commit  9298603be379ccf28747988d0dee0e86da29ede4 from
https://github.com/Xilinx/linux-xlnx.git

Add device tree descriptions for Xilinx boards.

Signed-off-by: Michal Simek <michal.simek@xilinx.com>
Signed-off-by: Meng Li <Meng.Li@windriver.com>

--- a/arch/arm64/boot/dts/xilinx/zynqmp-clk.dtsi
+++ b/arch/arm64/boot/dts/xilinx/zynqmp-clk.dtsi
@@ -12,6 +12,7 @@
 		compatible = "fixed-clock";
 		#clock-cells = <0>;
 		clock-frequency = <100000000>;
+		u-boot,dm-pre-reloc;
 	};
 
 	clk125: clk125 {
@@ -144,6 +145,10 @@
 	clocks = <&clk600>, <&clk100>;
 };
 
+&nand0 {
+	clocks = <&clk100 &clk100>;
+};
+
 &gem0 {
 	clocks = <&clk125>, <&clk125>, <&clk125>;
 };
@@ -170,6 +175,10 @@
 
 &i2c1 {
 	clocks = <&clk100>;
+};
+
+&qspi {
+	clocks = <&clk300 &clk300>;
 };
 
 &sata {
@@ -210,4 +219,20 @@
 
 &watchdog0 {
 	clocks = <&clk250>;
+};
+
+&xilinx_drm {
+	clocks = <&drm_clock>;
+};
+
+&xlnx_dp {
+	clocks = <&dp_aclk>, <&dp_aud_clk>;
+};
+
+&xlnx_dpdma {
+	clocks = <&dpdma_clk>;
+};
+
+&xlnx_dp_snd_codec0 {
+	clocks = <&dp_aud_clk>;
 };
