--- a/arch/arm64/boot/dts/xilinx/zynqmp-zcu104-revC.dts
+++ b/arch/arm64/boot/dts/xilinx/zynqmp-zcu104-revC.dts
@@ -1,10 +1,11 @@
-// SPDX-License-Identifier: GPL-2.0+
 /*
  * dts file for Xilinx ZynqMP ZCU104
  *
- * (C) Copyright 2017 - 2018, Xilinx, Inc.
+ * (C) Copyright 2017, Xilinx, Inc.
  *
  * Michal Simek <michal.simek@xilinx.com>
+ *
+ * SPDX-License-Identifier:	GPL-2.0+
  */
 
 /dts-v1/;
@@ -16,8 +17,8 @@
 #include <dt-bindings/phy/phy.h>
 
 / {
-	model = "ZynqMP ZCU104 RevA";
-	compatible = "xlnx,zynqmp-zcu104-revA", "xlnx,zynqmp-zcu104", "xlnx,zynqmp";
+	model = "ZynqMP ZCU104 RevC";
+	compatible = "xlnx,zynqmp-zcu104-revC", "xlnx,zynqmp-zcu104", "xlnx,zynqmp";
 
 	aliases {
 		ethernet0 = &gem3;
@@ -85,13 +86,32 @@
 	scl-gpios = <&gpio 16 GPIO_ACTIVE_HIGH>;
 	sda-gpios = <&gpio 17 GPIO_ACTIVE_HIGH>;
 
+	tca6416_u97: gpio@21 {
+		compatible = "ti,tca6416";
+		reg = <0x21>;
+		gpio-controller;
+		#gpio-cells = <2>;
+		/*
+		  * IRQ not connected
+		  * Lines:
+		  * 0 - IRPS5401_ALERT_B
+		  * 1 - HDMI_8T49N241_INT_ALM
+		  * 2 - MAX6643_OT_B
+		  * 3 - MAX6643_FANFAIL_B
+		  * 5 - IIC_MUX_RESET_B
+		  * 6 - GEM3_EXP_RESET_B
+		  * 7 - FMC_LPC_PRSNT_M2C_B
+		  * 4, 10 - 17 - not connected
+		  */
+	};
+
 	/* Another connection to this bus via PL i2c via PCA9306 - u45 */
-	i2c-mux@74 { /* u34 */
+	i2cswitch@74 { /* u34 */
 		compatible = "nxp,pca9548";
 		#address-cells = <1>;
 		#size-cells = <0>;
 		reg = <0x74>;
-		i2c@0 {
+		i2c@0 { /* i2c mw 74 0 1 */
 			#address-cells = <1>;
 			#size-cells = <0>;
 			reg = <0>;
@@ -104,24 +124,24 @@
 			 * 768B - 1024B address 0x57
 			 */
 			eeprom@54 { /* u23 */
-				compatible = "atmel,24c08";
+				compatible = "at,24c08";
 				reg = <0x54>;
 				#address-cells = <1>;
 				#size-cells = <1>;
 			};
 		};
 
-		i2c@1 {
+		i2c@1 { /* i2c mw 74 0 2 */
 			#address-cells = <1>;
 			#size-cells = <0>;
 			reg = <1>;
-			clock_8t49n287: clock-generator@6c { /* 8T49N287 - u182 */
+			clock_8t49n287: 8t49n287@6c { /* 8T49N287 - u182 */
 				compatible = "idt,8t49n287";
 				reg = <0x6c>;
 			};
 		};
 
-		i2c@2 {
+		i2c@2 { /* i2c mw 74 0 4 */
 			#address-cells = <1>;
 			#size-cells = <0>;
 			reg = <2>;
@@ -137,37 +157,19 @@
 			};
 		};
 
-		i2c@4 {
+		i2c@4 { /* i2c mw 74 0 8 */
 			#address-cells = <1>;
 			#size-cells = <0>;
 			reg = <4>;
-			tca6416_u97: gpio@21 {
-				compatible = "ti,tca6416";
-				reg = <0x21>;
-				gpio-controller;
-				#gpio-cells = <2>;
-				/*
-				 * IRQ not connected
-				 * Lines:
-				 * 0 - IRPS5401_ALERT_B
-				 * 1 - HDMI_8T49N241_INT_ALM
-				 * 2 - MAX6643_OT_B
-				 * 3 - MAX6643_FANFAIL_B
-				 * 5 - IIC_MUX_RESET_B
-				 * 6 - GEM3_EXP_RESET_B
-				 * 7 - FMC_LPC_PRSNT_M2C_B
-				 * 4, 10 - 17 - not connected
-				 */
-			};
 		};
 
-		i2c@5 {
+		i2c@5 { /* i2c mw 74 0 10 */ /* FMC_LPC */
 			#address-cells = <1>;
 			#size-cells = <0>;
 			reg = <5>;
 		};
 
-		i2c@7 {
+		i2c@7 { /* i2c mw 74 0 14 */ /* DDR4_SODIMM */
 			#address-cells = <1>;
 			#size-cells = <0>;
 			reg = <7>;
