drivers/edac: Added EDAC drivers for XLF board.
 Added cache L1/L2/L3, SMEM and CMEM drivers.
 Added linux style debug CMEM option.
 Changes:
  - added dtsi/dts definition for XLF board
  - separated configuration between X9 and XLF
  - fix issue with nca ring access
  - added tracepoints for L3 cache
  - other small code adjustments.
  - changed from CMEM debug local define to Kconfig parameter

Signed-off-by: Marek Majtyka <marekx.majtyka@intel.com>
[Quanyang:Original patch taken from
git://git.yoctoproject.org/linux-yocto-4.12 standard/axxia/base]
Signed-off-by: Quanyang Wang <quanyang.wang@windriver.com>

--- a/drivers/edac/Kconfig
+++ b/drivers/edac/Kconfig
@@ -393,6 +393,15 @@ config EDAC_AXXIA_SYSMEM_5500
 	  Support for System Memory Denali controller error
 	  detection on the AXXIA AXM55xx devices. This enables
 
+config EDAC_AXXIA_SYSMEM_6700
+	depends on ARCH_AXXIA
+	bool "AXXIA EDAC SysMem Controller for 6700"
+	help
+	  Support for System Memory Denali controller error
+	  detection on the AXXIA AXM67xx devices. This enables
+	  the System Memory error detection. System Memory error
+	  detection is interrupt driven.
+
 config EDAC_AXXIA_CMEM_5600
 	depends on ARCH_AXXIA
 	bool "AXXIA EDAC CMem Controller for 5600"
