--- a/arch/arm64/boot/dts/freescale/fsl-ls1046a-rdb.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-ls1046a-rdb.dts
@@ -139,6 +139,7 @@
 	num-cs = <2>;
 	bus-num = <0>;
 	status = "okay";
+	fsl,qspi-has-second-chip;
 
 	qflash0: s25fs512s@0 {
 		compatible = "spansion,m25p80";
@@ -146,6 +147,8 @@
 		#size-cells = <1>;
 		spi-max-frequency = <20000000>;
 		reg = <0>;
+		spi-rx-bus-width = <4>;
+		spi-tx-bus-width = <4>;
 	};
 
 	qflash1: s25fs512s@1 {
@@ -154,6 +157,8 @@
 		#size-cells = <1>;
 		spi-max-frequency = <20000000>;
 		reg = <1>;
+		spi-rx-bus-width = <4>;
+		spi-tx-bus-width = <4>;
 	};
 };
 
