--- a/arch/arm64/boot/dts/freescale/fsl-ls1012a-qds.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-ls1012a-qds.dts
@@ -173,21 +173,6 @@
 	};
 };
 
-&qspi {
-	num-cs = <2>;
-	bus-num = <0>;
-	status = "okay";
-
-	qflash0: s25fs512s@0 {
-		compatible = "spansion,m25p80";
-		#address-cells = <1>;
-		#size-cells = <1>;
-		spi-max-frequency = <20000000>;
-		m25p,fast-read;
-		reg = <0>;
-	};
-};
-
 &pfe {
 	status = "okay";
 	#address-cells = <1>;
@@ -232,4 +217,19 @@
 
 &sata {
 	status = "okay";
+};
+
+&qspi {
+	status = "okay";
+	qflash0: s25fs512s@0 {
+		compatible = "spansion,m25p80";
+		#address-cells = <1>;
+		#size-cells = <1>;
+		spi-max-frequency = <20000000>;
+		m25p,fast-read;
+		reg = <0>;
+		spi-rx-bus-width = <2>;
+		spi-tx-bus-width = <2>;
+	};
+
 };
