--- a/arch/arm64/boot/dts/freescale/fsl-ls2081a-rdb.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-ls2081a-rdb.dts
@@ -130,15 +130,17 @@
 		#address-cells = <1>;
 		#size-cells = <1>;
 		compatible = "spansion,m25p80";
-		m25p,fast-read;
+		spi-rx-bus-width = <4>;
+		spi-tx-bus-width = <4>;
 		spi-max-frequency = <20000000>;
 		reg = <0>;
 	};
 	flash1: s25fs512s@1 {
 		#address-cells = <1>;
 		#size-cells = <1>;
+		spi-rx-bus-width = <4>;
+		spi-tx-bus-width = <4>;
 		compatible = "spansion,m25p80";
-		m25p,fast-read;
 		spi-max-frequency = <20000000>;
 		reg = <1>;
 	};
