dts: fsl-ls1021a, fsl-ls1043a, fsl-ls1046a: add multi block node support
add block-offset to support different virtual block offset for qdma
base on soc;
the interrupt named "qdma-queueN(N:0,1,2,3)" correspond to a virtual
block,N based on block number of qdma;

Signed-off-by: Peng Ma <peng.ma@nxp.com>
[Xulin: Original patch taken from NXP LSDK-18.09.]
Signed-off-by: Xulin Sun <xulin.sun@windriver.com>

--- a/arch/arm64/boot/dts/freescale/fsl-ls1043a.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-ls1043a.dtsi
@@ -728,9 +728,15 @@
 			      <0x0 0x8390000 0x0 0x10000>, /* Status regs */
 			      <0x0 0x83a0000 0x0 0x40000>; /* Block regs */
 			interrupts = <0 152 0x4>,
-				     <0 39 0x4>;
-			interrupt-names = "qdma-error", "qdma-queue";
+				     <0 39 0x4>,
+				     <0 40 0x4>,
+				     <0 41 0x4>,
+				     <0 42 0x4>;
+			interrupt-names = "qdma-error", "qdma-queue0",
+				"qdma-queue1", "qdma-queue2", "qdma-queue3";
 			channels = <8>;
+			block-number = <1>;
+			block-offset = <0x10000>;
 			queues = <2>;
 			status-sizes = <64>;
 			queue-sizes = <64 64>;
