drivers/edac: include/trace: EDAC improvements
Changes and fixes:
 - CMEM/SMEM driver trace capabilities added
 - CMEM/SMEM cpu0 affinity used
 - SMEM code maintainability improved
 - CMEM multiple ca parity error event added
 - CMEM mpr dump on signal bit [21]
 - CMEM clear mr5 ca parity error flag added
 - CMEM irq storm fix

Signed-off-by: Marek Majtyka <marekx.majtyka@intel.com>
Signed-off-by: John Jacques <john.jacques@intel.com>
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>
[Quanyang:Original patch taken from
git://git.yoctoproject.org/linux-yocto-4.12 standard/axxia/base]
Signed-off-by: Quanyang Wang <quanyang.wang@windriver.com>

--- a/drivers/edac/Kconfig
+++ b/drivers/edac/Kconfig
@@ -402,6 +402,13 @@ config EDAC_AXXIA_SYSMEM_6700
 	  the System Memory error detection. System Memory error
 	  detection is interrupt driven.
 
+config DEBUG_EDAC_AXXIA_SYSMEM
+	depends on ARCH_AXXIA
+	bool "AXXIA EDAC SYSMEM error injection interface."
+	help
+	  Support for configuration of SYSMEM edac tracing functionality.
+	  It works for both 5600 and 6700 board families.
+
 config EDAC_AXXIA_CMEM_5600
 	depends on ARCH_AXXIA
 	bool "AXXIA EDAC CMem Controller for 5600"
