axxia/arm: Fixed failed NFS boot
Added the defaults for AXXIA for MDIO and ACP Network

Signed-off-by: Charlie Paul <charlie.paul@windriver.com>
Signed-off-by: John Jacques <john.jacques@intel.com>
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>
[Quanyang:Original patch taken from
git://git.yoctoproject.org/linux-yocto-4.12 standard/axxia/base]
Signed-off-by: Quanyang Wang <quanyang.wang@windriver.com>

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -527,6 +527,7 @@ config AXXIA_PEI
 config AXXIA_MDIO
        bool "Axxia MDIO Driver"
        depends on ARCH_AXXIA
+       default y
        help
 	 Provide access to the Axxia MDIO bus.
 
