clk: Adding Silicon labs si5324 clock driver
commit 19443df6737f57457d56c366fd57a6573002ba68 from
https://github.com/Xilinx/linux-xlnx.git

This patch adds the driver for Silicon Labs si5324, si5329 and
si5328 programmable oscillators. The devices generate low-jitter
clock signal and are reprogrammable via an I2C interface.

Initial Xilinx version source files are taken from the following repo:
https://github.com/Xilinx/hdmi-modules

Signed-off-by: Venkateshwar Rao Gannavarapu <venkateshwar.rao.gannavarapu@xilinx.com>
Signed-off-by: Michal Simek <michal.simek@xilinx.com>
Signed-off-by: Meng Li <Meng.Li@windriver.com>

--- a/drivers/clk/Makefile
+++ b/drivers/clk/Makefile
@@ -48,6 +48,7 @@ obj-$(CONFIG_COMMON_CLK_SI5351)		+= clk-si5351.o
 obj-$(CONFIG_COMMON_CLK_SI514)		+= clk-si514.o
 obj-$(CONFIG_COMMON_CLK_SI544)		+= clk-si544.o
 obj-$(CONFIG_COMMON_CLK_SI570)		+= clk-si570.o
+obj-$(CONFIG_COMMON_CLK_SI5324)		+= si5324drv.o clk-si5324.o
 obj-$(CONFIG_COMMON_CLK_STM32F)		+= clk-stm32f4.o
 obj-$(CONFIG_COMMON_CLK_STM32H7)	+= clk-stm32h7.o
 obj-$(CONFIG_COMMON_CLK_STM32MP157)	+= clk-stm32mp1.o
