--- a/drivers/ptp/Kconfig
+++ b/drivers/ptp/Kconfig
@@ -43,7 +43,7 @@ config PTP_1588_CLOCK_DTE
 
 config PTP_1588_CLOCK_QORIQ
 	tristate "Freescale QorIQ 1588 timer as PTP clock"
-	depends on GIANFAR
+	depends on GIANFAR || FSL_DPAA_ETH || FSL_SDK_DPAA_ETH
 	depends on PTP_1588_CLOCK
 	default y
 	help
@@ -54,21 +54,6 @@ config PTP_1588_CLOCK_QORIQ
 
 	  To compile this driver as a module, choose M here: the module
 	  will be called ptp_qoriq.
-
-config PTP_1588_CLOCK_DPAA
-	tristate "Freescale DPAA as PTP clock"
-	depends on FSL_SDK_DPAA_ETH
-	select PTP_1588_CLOCK
-        select FSL_DPAA_TS
-        default n
-	help
-	  This driver adds support for using the DPAA 1588 timer module
-	  as a PTP clock. This clock is only useful if your PTP programs are
-	  getting hardware time stamps on the PTP Ethernet packets
-	  using the SO_TIMESTAMPING API.
-
-	  To compile this driver as a module, choose M here: the module
-	  will be called dpaa_ptp.
 
 config PTP_1588_CLOCK_DPAA2
 	tristate "Freescale DPAA2 as PTP clock"
