arch: arm64: dts: add drive-strength property in dts for xilinx-zcu102 platform
In order to support Swissbit SD card, it is need to set the SDIO pin
drvier strength as 2ma explicitly. So, add the drive-strength property.
Other SD cards(For example, SanDisk and Kingston) are also verifyied
when SDIO pin drvier strength is 2ma, they all work fine.

Signed-off-by: Meng Li <Meng.Li@windriver.com>

--- a/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-revA.dts
+++ b/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-revA.dts
@@ -735,6 +735,7 @@
 			slew-rate = <SLEW_RATE_SLOW>;
 			io-standard = <IO_STANDARD_LVCMOS18>;
 			bias-disable;
+			drive-strength = <2>;
 		};
 
 		mux-cd {
